# pal_pro_gripper-release

./: CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  setup.cfg  tracks.yaml
config/: gripper_controller.yaml
debian/: changelog  control  copyright  gbp.conf  rules
launch/: robot_state_publisher.launch.py
pal_pro_gripper/: CHANGELOG.rst  package.xml
pal_pro_gripper_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
pal_pro_gripper_bringup/launch/: pal_pro_gripper_bringup.launch.py
pal_pro_gripper_controller_configuration/: CHANGELOG.rst  CMakeLists.txt  package.xml
pal_pro_gripper_controller_configuration/config/: gripper_controller.yaml
pal_pro_gripper_controller_configuration/launch/: pal_pro_gripper_controller.launch.py  pal_pro_gripper_controller_standalone.launch.py
pal_pro_gripper_description/: CHANGELOG.rst  package.xml
pal_pro_gripper_description/config/: pal_pro_gripper_configuration.yaml  show.rviz
pal_pro_gripper_description/gazebo/: gazebo.urdf.xacro
pal_pro_gripper_description/launch/: show.launch.py
pal_pro_gripper_description/meshes/: base_link_ntc.stl  screw.stl
pal_pro_gripper_description/mujoco/: mj_tags.xacro
pal_pro_gripper_description/pal_pro_gripper_description/: launch_arguments.py
pal_pro_gripper_description/robots/: pal_pro_gripper.urdf.xacro
pal_pro_gripper_description/ros2_control/: ros2_control.urdf.xacro
pal_pro_gripper_description/urdf/: gripper.ros2_control.xacro  gripper.transmission.xacro  gripper.urdf.xacro
pal_pro_gripper_wrapper/: CHANGELOG.rst  gripper_grasper_srv.py  package.xml  setup.py
pal_pro_gripper_wrapper/config/: gripper.yaml
pal_pro_gripper_wrapper/launch/: pal_pro_gripper_wrapper.launch.py
pal_pro_gripper_wrapper/pal_pro_gripper_wrapper/: gripper_grasper_srv.py
robots/: pal_pro_gripper.urdf.xacro
ros2_control/: ros2_control.urdf.xacro
rpm/: ros-humble-pal-pro-gripper-bringup.spec  ros-humble-pal-pro-gripper-description.spec  ros-humble-pal-pro-gripper-wrapper.spec  template.spec
urdf/: gripper.properties.xacro  gripper.ros2_control.xacro  gripper.transmission.xacro  gripper.urdf.xacro
