<?xml version="1.0"?>
<package format="3">
  <name>pal_pro_gripper_controller_configuration</name>
  <version>1.11.3</version>
  <description>The pal_pro_gripper_controller_configuration package</description>
  <maintainer email="david.terkuile@pal-robotics.com">David ter Kuile</maintainer>
  <maintainer email="ilenia.perrella@pal-robotics.com">Ilenia Perrella</maintainer>
  <author email="david.terkuile@pal-robotics.com">David ter Kuile</author>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_pal</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>pal_pro_gripper_wrapper</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
