<?xml version="1.0"?>
<package format="3">
  <name>pal_pro_gripper</name>
  <version>1.8.0</version>
  <description>The pal_pro_gripper package</description>

  <maintainer email="david.terkuile@pal-robotics.com">David ter Kuile</maintainer>
  <maintainer email="ilenia.perrella@pal-robotics.com">Ilenia Perrella</maintainer>

  <author email="david.terkuile@pal-robotics.com">David ter Kuile</author>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>pal_pro_gripper_description</exec_depend>
  <exec_depend>pal_pro_gripper_controller_configuration</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
