<?xml version="1.0"?>
<package format="3">
  <name>pal_pro_gripper_bringup</name>
  <version>1.11.3</version>
  <description>Launch files to upload the robot description and start the controllers</description>
  <maintainer email="oscar.martinez@pal-robotics.com">Oscar Martinez</maintainer>
  <maintainer email="ilenia.perrella@pal-robotics.com">Ilenia Perrella</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>pal_pro_gripper_controller_configuration</exec_depend>
  <exec_depend>pal_pro_gripper_description</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
