<?xml version="1.0"?>
<package format="3">
  <name>pal_pro_gripper_description</name>
  <version>1.8.0</version>
  <description>The pal_pro_gripper_description package</description>

  <maintainer email="david.terkuile@pal-robotics.com">David ter Kuile</maintainer>
  <maintainer email="ilenia.perrella@pal-robotics.com">Ilenia Perrella</maintainer>

  <author email="david.terkuile@pal-robotics.com">David ter Kuile</author>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <build_depend>xacro</build_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>pal_urdf_utils</exec_depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>


</package>
