<?xml version="1.0"?>
<package format="3">
  <name>pal_pro_gripper_wrapper</name>
  <version>1.7.2</version>
  <description>Grasp controller to close with a determined error on position only
    so to skip overheating.</description>
  <maintainer email="matteovillani@pal-robotics.com">user</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>

  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

